Add database RLS tests for user_profiles table

--- a/.gitignore
+++ b/.gitignore
@@ -22,11 +22,16 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# local env files
-.env*.local
+# env files (never commit secrets)
+.env
+.env.*
+!.env.example
 
 # vercel
 .vercel
+
+# supabase
+.supabase
 
 # typescript
 *.tsbuildinfo
