--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "@vitejs/plugin-react": "^4.2.1",
     "@vitest/coverage-v8": "1.6.1",
     "@vitest/ui": "1.6.1",
+    "dotenv": "^17.2.3",
     "eslint": "^8.0.0",
     "eslint-config-next": "^15.0.0",
     "jsdom": "^23.0.1",
     "typescript": "^5.0.0",
+    "undici": "^7.19.2",
     "vitest": "1.6.1"
   }
 }
